added risk to dashboard and fixed chart bug

--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -6,10 +6,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Rad Meeting DB</title>
 </head>
 <body>
-  <h1>Index</h1>
+  <h1>Radcliffe Meeting App</h1>
   <div class="form-group col-md-6 offset-md-3 log_form">
   <form method='POST'>
    {% csrf_token %} {{ login_form |crispy}}
