--- a/db/templates/finance.html
+++ b/db/templates/finance.html
@@ -19,7 +19,7 @@
             </div>
 
           </div><!-- row one-->
-          <h4 class='text-secondary'>Finance Risks </h4>
+          <h4 class='text-secondary'>Finance Risks</h4>
 <div class='col-md-8 '>
  
           <table class="table table-striped table-dark">
@@ -27,21 +27,21 @@
               <tr>
                
                 <th scope="col">Risk summary</th>
-                <th scope="col">Last Reviewed
+                <th scope="col">Control
                 
                 </th>
                 <th scope="col">Rating</th>
               </tr>
             </thead>
             <tbody>
-            
+            {% for risk in risks %}
               <tr>
-               <td>Here is a risk about finance</td>
+               <td>{{ risk.risk }}</td>
               
-                <td>24/11/2020</td>
-                <td><i class="fas fa-frown text-danger"></i></td>
+                <td>{{risk.control}}</td>
+                <td><i class="fas fa-frown text-warning"></i></td>
               </tr>
-          
+          {% endfor %}
             </tbody>
           </table>
 
