--- a/templates/base.html
+++ b/templates/base.html
@@ -92,6 +92,9 @@
               <a class="dropdown-item" href="{% url 'charts' %}">Charts</a>
              
                   </li></div></li>
+                         <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          </li>
     
         </ul>
       </div>
