fixed issues bug

--- a/db/templates/hr.html
+++ b/db/templates/hr.html
@@ -42,8 +42,8 @@
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body">
                  <ol>
-                     <li> Nurse 35 hours per week</li>
-                     <li> Admin 20 hours per week</li>
+                     
+                     <li> Adminx3</li>
                  </ol>
                 </div>
               </div>
@@ -59,7 +59,7 @@
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                 <div class="card-body">
                 <ol>
-                    <li>Jane Smith - 01/01/2020 </li>
+                    <li>Emma Bowyer- 21/12/2020 </li>
                 </ol>
                 </div>
               </div>
