--- a/db/templates/hr.html
+++ b/db/templates/hr.html
@@ -34,7 +34,7 @@
               <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
                   <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Recruitment - 2 Vacancies
+                    Recruitment - 4 Vacancies
                   </button>
                 </h2>
               </div>
@@ -44,6 +44,7 @@
                  <ol>
                      
                      <li> Adminx3</li>
+                      <li> HCA x1</li>
                  </ol>
                 </div>
               </div>
@@ -60,6 +61,7 @@
                 <div class="card-body">
                 <ol>
                     <li>Emma Bowyer- 21/12/2020 </li>
+                    <li>Frankie Parnell - TBC</li>
                 </ol>
                 </div>
               </div>
@@ -68,13 +70,13 @@
               <div class="card-header" id="headingThree">
                 <h2 class="mb-0">
                   <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Long Term Sick -2
+                    Long Term Sick 
                   </button>
                 </h2>
               </div>
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                 <div class="card-body">
-                    <ol><li> A person 01/01/2020</li></ol>
+                    <ol><li> JM return 02/11/2020</li></ol>
      
                 </div>
               </div>
