--- a/db/templates/building.html
+++ b/db/templates/building.html
@@ -88,7 +88,7 @@
       <td>{{action.action}}</td>
       <td>{{action.owner}}</td>
       <td>{{action.date_complete}}</td>
-      <td><a href="issue/{{action.pk}}">Update</td>
+      <td><a href="{{action.pk}}">Update</td>
     
     </tr>
    {% endfor %}
