--- a/db/templates/finance.html
+++ b/db/templates/finance.html
@@ -92,7 +92,7 @@
       <td>{{action.action}}</td>
       <td>{{action.owner}}</td>
       <td>{{action.date_complete}}</td>
-      <td><a href="issue/{{action.pk}}">Update</td>
+      <td><a href="{{action.pk}}">Update</td>
     
     </tr>
    {% endfor %}
